swagger updates, response status codes updates
